--- a/task-2/src/App.css
+++ b/task-2/src/App.css
@@ -1,38 +1,59 @@
+@import url("https://fonts.googleapis.com/css2?family=Calistoga&display=swap");
+
+body {
+  background-color: #212529;
+  color: white;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  margin-top: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
+  background-color: #2d46b9;
+  border: none;
+  padding: 15px;
+  margin: 50px;
+  border-radius: 23px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.column3 {
+  float: left !important;
+  width: 33% !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.profile {
+  max-width: 300px;
+  margin: 30px auto;
+  text-align: center;
+  font-family: arial;
+  padding: 20px;
+  border-radius: 23px;
+  background: linear-gradient(135deg, #2d46b9, #1e3163);
+}
+
+.email {
+  color: gainsboro;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.name {
+  font-size: 25px;
+  font-weight: bolder;
+}
+
+#main {
+  padding: 7px 50px;
+  margin: 0 auto;
+  display: none;
+}
+
+.avatar {
+  border-radius: 15px;
 }
